<?xml version="1.0"?>
<package format="2">
  <name>apsrc_msgs</name>
  <version>1.0.0</version>
  <description>The apsrc_msgs</description>
  <maintainer email="mbahramg@mtu.edu">Mojtaba Bahramgiri</maintainer>
  <license>Apache 2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
